--- a/src/config/tokens/core/_core-typography.scss
+++ b/src/config/tokens/core/_core-typography.scss
@@ -4,7 +4,7 @@
 // Font family
 $font-family-english-heading: "Poppins";
 $font-family-english-text: "Figtree";
-$font-family-other-languages: "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
+$font-family-other-languages: "Noto Sans Hebrew", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
 $text-font-family: $font-family-english-text, $font-family-other-languages;
 $title-font-family: $font-family-english-heading, $font-family-other-languages;
 
