Remove spacing, border-radius, box-shadows variables from the global-css-settings.scss

--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -2,6 +2,6 @@
 
 @mixin frame() {
   border: var(--layout-border-color) 1px solid;
-  border-radius: $border-radius-medium;
+  border-radius: var(--border-radius-medium);
   border-color: var(--layout-border-color);
 }
