--- a/storybook/stand-alone-documentation/welcome/contributors/contributors.scss
+++ b/storybook/stand-alone-documentation/welcome/contributors/contributors.scss
@@ -10,10 +10,11 @@ $contributor-grid-cell-array-calc: calc(33.3% - #{$contributor-grid-column-gap})
   margin-top: 68px;
 
   @include grid-auto-fit(
-          $grid-column-gap: $contributor-grid-column-gap,
-          $grid-row-gap: $contributor-grid-row-gap,
-          $grid-cell-min-width: $contributor-cell-min-width,
-          $grid-cell-array-calc: $contributor-grid-cell-array-calc);
+    $grid-column-gap: $contributor-grid-column-gap,
+    $grid-row-gap: $contributor-grid-row-gap,
+    $grid-cell-min-width: $contributor-cell-min-width,
+    $grid-cell-array-calc: $contributor-grid-cell-array-calc
+  );
 
   &_contributor {
     &--bg-pattern-1 {
@@ -36,5 +37,4 @@ $contributor-grid-cell-array-calc: calc(33.3% - #{$contributor-grid-column-gap})
       background-image: url("../assets/BackgroundPattern5.png");
     }
   }
-
 }
