--- a/storybook/stand-alone-documentation/spacing/spacing-sizes/spacing-sizes.scss
+++ b/storybook/stand-alone-documentation/spacing/spacing-sizes/spacing-sizes.scss
@@ -1,5 +1,4 @@
 @import "../../../../styles/global-css-settings";
-@import "../../../../styles/content-spacing";
 
 $spacing-grid-column-gap: var(--spacing-small);
 $spacing-grid-row-gap: var(--spacing-xl);
@@ -7,7 +6,7 @@ $spacing-cell-min-width: $grid-auto-fit-cell-width-small;
 $spacing-grid-cell-array-calc: calc(12.5% - #{$spacing-grid-column-gap});
 
 .monday-ui-style-storybook-spacing-sizes {
-  margin: $spacing-between-section-items 0;
+  margin: var(--spacing-xl) 0;
 
   > * {
     margin-right: auto;
