--- a/src/config/tokens/core/_core-fonts-deprecated.scss
+++ b/src/config/tokens/core/_core-fonts-deprecated.scss
@@ -25,8 +25,8 @@ $font-weight-normal: 400;
 $font-weight-bold: 500;
 
 // - Font family
-$font-family: "Figtree", "Roboto", "Noto Sans Hebrew", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
-$title-font-family: "Poppins", "Roboto", "Noto Sans Hebrew", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
+$font-family: "Noto Sans Hebrew", "Figtree", "Roboto", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
+$title-font-family: "Noto Sans Hebrew", "Poppins", "Roboto", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
 $h1-font-family: var(--title-font-family);
 
 // - Font smoothing
