--- a/storybook/stand-alone-documentation/welcome/contributors/contributors.scss
+++ b/storybook/stand-alone-documentation/welcome/contributors/contributors.scss
@@ -1,4 +1,6 @@
 @import "../../../../styles/global-css-settings";
+//@import "~vibe-storybook-components/dist/tokens"; // TODO failing with an error
+//@import "~monday-ui-style/dist/mixins"; // though this works - why? Talk with Hadas
 
 $contributor-cell-min-width: $grid-auto-fit-cell-width-xl;
 $contributor-grid-column-gap: var(--spacing-large);
