Remove inner storybook styles, change spacing tokens to reference sb tokens

--- a/storybook/stand-alone-documentation/welcome/intro/intro.scss
+++ b/storybook/stand-alone-documentation/welcome/intro/intro.scss
@@ -1,5 +1,5 @@
 .monday-storybook-intro {
-  margin-bottom: var(--spacing-medium);
+  margin-bottom: var(--sb-spacing-medium);
   font-family: var(--title-font-family);
   color: var(--primary-text-color);
   font-size: var(--font-size-h2);
