--- a/storybook/stand-alone-documentation/welcome/contributors/contributors.scss
+++ b/storybook/stand-alone-documentation/welcome/contributors/contributors.scss
@@ -1,16 +1,14 @@
-@import "../../../../styles/global-css-settings";
-//@import "~vibe-storybook-components/dist/tokens"; // TODO failing with an error
-//@import "~monday-ui-style/dist/mixins"; // though this works - why? Talk with Hadas
+@import "~vibe-storybook-components/dist/mixins";
 
-$contributor-cell-min-width: $grid-auto-fit-cell-width-xl;
-$contributor-grid-column-gap: var(--spacing-large);
+$contributor-cell-min-width: $sb-grid-auto-fit-cell-width-xl;
+$contributor-grid-column-gap: var(--sb-spacing-large);
 $contributor-grid-row-gap: 90px;
 $contributor-grid-cell-array-calc: calc(33.3% - #{$contributor-grid-column-gap});
 
 .monday-storybook-welcome-contributors {
   margin-top: 68px;
 
-  @include grid-auto-fit(
+  @include sb-grid-auto-fit(
     $grid-column-gap: $contributor-grid-column-gap,
     $grid-row-gap: $contributor-grid-row-gap,
     $grid-cell-min-width: $contributor-cell-min-width,
