--- a/storybook/stand-alone-documentation/welcome/intro/intro.scss
+++ b/storybook/stand-alone-documentation/welcome/intro/intro.scss
@@ -1,8 +1,8 @@
 .monday-storybook-intro {
   margin-bottom: var(--sb-spacing-medium);
-  font-family: var(--title-font-family);
-  color: var(--primary-text-color);
-  font-size: var(--font-size-h2);
+  font-family: var(--sb-title-font-family);
+  color: var(--sb-primary-text-color);
+  font-size: var(--sb-font-size-h2);
   line-height: 28px;
   letter-spacing: -0.21px;
   text-align: left;
