--- a/src/config/maps/themes/black/keys/_black-theme-keys.scss
+++ b/src/config/maps/themes/black/keys/_black-theme-keys.scss
@@ -11,6 +11,9 @@ $theme-black-keys: (
   primary-text-color: $theme-black-primary-text-color,
   text-color-on-primary: $theme-black-text-color-on-primary,
   text-color-on-inverted: $theme-black-text-color-on-inverted,
+  text-color-on-positive: $theme-black-text-color-on-positive,
+  text-color-on-negative: $theme-black-text-color-on-negative,
+  text-color-on-warning: $theme-black-text-color-on-warning,
   secondary-text-color: $theme-black-secondary-text-color,
   placeholder-color: $theme-black-placeholder-color,
   icon-color: $theme-black-icon-color,
