--- a/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
+++ b/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
@@ -13,6 +13,9 @@ $theme-dark-keys: (
   primary-text-color: $theme-dark-primary-text-color,
   text-color-on-primary: $theme-dark-text-color-on-primary,
   text-color-on-inverted: $theme-dark-text-color-on-inverted,
+  text-color-on-positive: $theme-dark-text-color-on-positive,
+  text-color-on-negative: $theme-dark-text-color-on-negative,
+  text-color-on-warning: $theme-dark-text-color-on-warning,
   secondary-text-color: $theme-dark-secondary-text-color,
   placeholder-color: $theme-dark-placeholder-color,
   icon-color: $theme-dark-icon-color,
