--- a/src/config/tokens/themes/hacker/keys/_hacker-theme-keys.scss
+++ b/src/config/tokens/themes/hacker/keys/_hacker-theme-keys.scss
@@ -18,6 +18,9 @@ $theme-hacker-primary-selected-hover-color: $color-deep_blue;
 $theme-hacker-primary-text-color: $color-snow;
 
 $theme-hacker-text-color-on-inverted: $color-mud_black; // todo: fix, value from basic theme
+$theme-hacker-text-color-on-positive: $color-snow_white;
+$theme-hacker-text-color-on-negative: $color-snow_white;
+$theme-hacker-text-color-on-warning: $color-mud_black;
 
 $theme-hacker-secondary-text-color: $color-jaco_gray; // todo: fix, value from basic legacy palette
 $theme-hacker-placeholder-color: $color-wolf_gray; // todo: fix, value from basic theme
