Convert welcome files to use modular styles

--- a/storybook/stand-alone-documentation/welcome/intro/intro.module.scss
+++ b/storybook/stand-alone-documentation/welcome/intro/intro.module.scss
@@ -1,4 +1,4 @@
-.monday-storybook-intro {
+.intro {
   margin-bottom: var(--sb-spacing-medium);
   font-family: var(--sb-title-font-family);
   color: var(--sb-primary-text-color);
