--- a/storybook/stand-alone-documentation/welcome/welcome-header/welcome-header.module.scss
+++ b/storybook/stand-alone-documentation/welcome/welcome-header/welcome-header.module.scss
@@ -1,4 +1,4 @@
-.monday-storybook-welcome-header {
+.welcomeHeader {
   position: relative;
   width: 100%;
   height: 294px;
@@ -9,13 +9,9 @@
   background-size: cover;
   background-image: url('../assets/WelcomePageCover.png');
 
-  &_text {
+  &Text {
     width: 461px;
     z-index: 1;
     align-content: center;
-  }
-  &_image {
-    right: 0;
-    position: absolute;
   }
 }
