Replace text-color-on-positive, text-color-on-negative, text-color-on-warning with text-color-fixed-light, text-color-fixed-dark

--- a/src/config/maps/themes/black/keys/_black-theme-keys.scss
+++ b/src/config/maps/themes/black/keys/_black-theme-keys.scss
@@ -11,9 +11,8 @@ $theme-black-keys: (
   primary-text-color: $theme-black-primary-text-color,
   text-color-on-primary: $theme-black-text-color-on-primary,
   text-color-on-inverted: $theme-black-text-color-on-inverted,
-  text-color-on-positive: $theme-black-text-color-on-positive,
-  text-color-on-negative: $theme-black-text-color-on-negative,
-  text-color-on-warning: $theme-black-text-color-on-warning,
+  text-color-fixed-light: $theme-black-text-color-fixed-light,
+  text-color-fixed-dark: $theme-black-text-color-fixed-dark,
   secondary-text-color: $theme-black-secondary-text-color,
   placeholder-color: $theme-black-placeholder-color,
   icon-color: $theme-black-icon-color,
