--- a/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
+++ b/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
@@ -11,9 +11,8 @@ $theme-hacker-keys: (
   primary-selected-hover-color: $theme-hacker-primary-selected-hover-color,
   primary-text-color: $theme-hacker-primary-text-color,
   text-color-on-inverted: $theme-hacker-text-color-on-inverted,
-  text-color-on-positive: $theme-hacker-text-color-on-positive,
-  text-color-on-negative: $theme-hacker-text-color-on-negative,
-  text-color-on-warning: $theme-hacker-text-color-on-warning,
+  text-color-fixed-light: $theme-hacker-text-color-fixed-light,
+  text-color-fixed-dark: $theme-hacker-text-color-fixed-dark,
   secondary-text-color: $theme-hacker-secondary-text-color,
   placeholder-color: $theme-hacker-placeholder-color,
   icon-color: $theme-hacker-icon-color,
