Add fixed-light-color and fixed-dark-color tokens

--- a/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
+++ b/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
@@ -19,6 +19,8 @@ $theme-dark-keys: (
   placeholder-color: $theme-dark-placeholder-color,
   icon-color: $theme-dark-icon-color,
   link-color: $theme-dark-link-color,
+  fixed-light-color: $theme-dark-fixed-light-color,
+  fixed-dark-color: $theme-dark-fixed-dark-color,
   primary-background-color: $theme-dark-primary-background-color,
   primary-background-hover-color: $theme-dark-primary-background-hover-color,
   secondary-background-color: $theme-dark-secondary-background-color,
