--- a/src/config/maps/themes/basic/keys/_keys.scss
+++ b/src/config/maps/themes/basic/keys/_keys.scss
@@ -18,6 +18,8 @@ $theme-basic-keys: (
   placeholder-color: $placeholder-color,
   icon-color: $icon-color,
   link-color: $link-color,
+  fixed-light-color: $fixed-light-color,
+  fixed-dark-color: $fixed-dark-color,
   primary-background-color: $primary-background-color,
   primary-background-hover-color: $primary-background-hover-color,
   secondary-background-color: $secondary-background-color,
