--- a/src/config/maps/themes/black/keys/_black-theme-keys.scss
+++ b/src/config/maps/themes/black/keys/_black-theme-keys.scss
@@ -17,6 +17,8 @@ $theme-black-keys: (
   placeholder-color: $theme-black-placeholder-color,
   icon-color: $theme-black-icon-color,
   link-color: $theme-black-link-color,
+  fixed-light-color: $theme-black-fixed-light-color,
+  fixed-dark-color: $theme-black-fixed-dark-color,
   primary-background-color: $theme-black-primary-background-color,
   primary-background-hover-color: $theme-black-primary-background-hover-color,
   secondary-background-color: $theme-black-secondary-background-color,
