--- a/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
+++ b/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
@@ -17,6 +17,8 @@ $theme-hacker-keys: (
   placeholder-color: $theme-hacker-placeholder-color,
   icon-color: $theme-hacker-icon-color,
   link-color: $theme-hacker-link-color,
+  fixed-light-color: $theme-hacker-fixed-light-color,
+  fixed-dark-color: $theme-hacker-fixed-dark-color,
   primary-background-color: $theme-hacker-primary-background-color,
   primary-background-hover-color: $theme-hacker-primary-background-hover-color,
   secondary-background-color: $theme-hacker-secondary-background-color,
