--- a/storybook/stand-alone-documentation/welcome/welcome-header/welcome-header.module.scss
+++ b/storybook/stand-alone-documentation/welcome/welcome-header/welcome-header.module.scss
@@ -7,7 +7,7 @@
   padding-left: 40px;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('../assets/WelcomePageCover.png');
+  background-image: url("../assets/WelcomePageCover.png");
 
   &Text {
     width: 461px;
