--- a/src/config/maps/core/_core-radius-map.scss
+++ b/src/config/maps/core/_core-radius-map.scss
@@ -6,5 +6,5 @@
 $core-border-radius-map: (
   border-radius-small: $border-radius-small,
   border-radius-medium: $border-radius-medium,
-  border-radius-big: $border-radius-big
+  border-radius-big: $border-radius-big,
 );
