--- a/src/config/maps/core/_core-shadows-map.scss
+++ b/src/config/maps/core/_core-shadows-map.scss
@@ -8,12 +8,12 @@ $core-shadow-size-map: (
   small: $shadow-size-small,
   medium: $shadow-size-medium,
   large: $shadow-size-large,
-  mediun: var(--box-shadow-medium)
+  mediun: var(--box-shadow-medium),
 );
 
 $core-shadow-opacity-map: (
   xs-opacity: $shadow-small-opacity,
   small-opacity: $shadow-small-opacity,
   medium-opacity: $shadow-medium-opacity,
-  large-opacity: $shadow-large-opacity
+  large-opacity: $shadow-large-opacity,
 );
