--- a/src/config/maps/core/_core-spacing-map.scss
+++ b/src/config/maps/core/_core-spacing-map.scss
@@ -10,5 +10,5 @@ $core-spacing-map: (
   spacing-large: $spacing-large,
   spacing-xl: $spacing-xl,
   spacing-xxl: $spacing-xxl,
-  spacing-xxxl: $spacing-xxxl
+  spacing-xxxl: $spacing-xxxl,
 );
