--- a/src/config/maps/themes/basic/palette/legacy/_legacy-pallete.scss
+++ b/src/config/maps/themes/basic/palette/legacy/_legacy-pallete.scss
@@ -78,5 +78,5 @@ $theme-basic-legacy-palette: (
   color-highlight_blue-rgb: $color-highlight_blue-rgb,
   color-snow_white-with-opacity: $color-snow_white-with-opacity,
   color-wolf_gray-with-opacity: $color-wolf_gray-with-opacity,
-  color-asphalt-with-opacity: $color-asphalt-with-opacity
+  color-asphalt-with-opacity: $color-asphalt-with-opacity,
 );
