--- a/src/config/maps/themes/black/keys/legacy/_black-theme-legacy-keys.scss
+++ b/src/config/maps/themes/black/keys/legacy/_black-theme-legacy-keys.scss
@@ -29,5 +29,5 @@ $theme-black-legacy-keys: (
   layout-border-on-secondary-color: $theme-black-layout-border-on-secondary-color,
   disabled-background-on-secondary-color: $theme-black-disabled-background-on-secondary-color,
   disabled-text-on-secondary-color: $theme-black-disabled-text-on-secondary-color,
-  box-shadow-mediun: $box-shadow-mediun
+  box-shadow-mediun: $box-shadow-mediun,
 );
