--- a/src/config/maps/themes/hacker/keys/legacy/_hacker-theme-legacy-keys.scss
+++ b/src/config/maps/themes/hacker/keys/legacy/_hacker-theme-legacy-keys.scss
@@ -29,5 +29,5 @@ $theme-hacker-legacy-keys: (
   layout-border-on-secondary-color: $theme-hacker-layout-border-on-secondary-color,
   disabled-background-on-secondary-color: $theme-hacker-disabled-background-on-secondary-color,
   disabled-text-on-secondary-color: $theme-hacker-disabled-text-on-secondary-color,
-  box-shadow-mediun: $box-shadow-mediun
+  box-shadow-mediun: $box-shadow-mediun,
 );
