--- a/src/config/maps/themes/hacker/palette/legacy/_hacker-theme-legacy-palette.scss
+++ b/src/config/maps/themes/hacker/palette/legacy/_hacker-theme-legacy-palette.scss
@@ -3,5 +3,5 @@
 
 $theme-hacker-legacy-palette: (
   color-success: $theme-hacker-success,
-  color-error: $theme-hacker-error
+  color-error: $theme-hacker-error,
 );
