--- a/src/config/maps/core/_core-typography-map-deprecated.scss
+++ b/src/config/maps/core/_core-typography-map-deprecated.scss
@@ -11,7 +11,7 @@ $core-typography-font-sizes-map: (
   font-size-h5: $font-size-h5,
   font-size-general-label: $font-size-general-label,
   font-size-paragraph: $font-size-paragraph,
-  font-size-subtext: $font-size-subtext
+  font-size-subtext: $font-size-subtext,
 );
 
 $core-typography-line-height-sizes-map: (
@@ -22,7 +22,7 @@ $core-typography-line-height-sizes-map: (
   font-line-height-h5: $font-line-height-h5,
   font-line-height-general-label: $font-line-height-general-label,
   font-line-height-paragraph: $font-line-height-paragraph,
-  font-line-height-subtext: $font-line-height-subtext
+  font-line-height-subtext: $font-line-height-subtext,
 );
 
 $core-typography-fonts-map-deprecated: (
@@ -33,5 +33,5 @@ $core-typography-fonts-map-deprecated: (
   font-h5: $font-h5,
   font-general-label: $font-general-label,
   font-paragraph: $font-paragraph,
-  font-subtext: $font-subtext
+  font-subtext: $font-subtext,
 );
