--- a/src/config/maps/core/_core-typography-map.scss
+++ b/src/config/maps/core/_core-typography-map.scss
@@ -18,7 +18,7 @@ $core-typography-fonts-map: (
   font-text1-normal: $font-text1-normal,
   font-text2-bold: $font-text2-bold,
   font-text2-medium: $font-text2-medium,
-  font-text2-normal: $font-text2-normal
+  font-text2-normal: $font-text2-normal,
 );
 
 $core-typography-letter-spacing-map: (
@@ -30,5 +30,5 @@ $core-typography-letter-spacing-map: (
   letter-spacing-h2-light: $letter-spacing-h2-light,
   letter-spacing-h3-bold: $letter-spacing-h3-bold,
   letter-spacing-h3-normal: $letter-spacing-h3-normal,
-  letter-spacing-h3-light: $letter-spacing-h3-light
+  letter-spacing-h3-light: $letter-spacing-h3-light,
 );
