--- a/src/config/maps/themes/basic/keys/_keys.scss
+++ b/src/config/maps/themes/basic/keys/_keys.scss
@@ -46,7 +46,7 @@ $theme-basic-keys: (
   brand-hover-color: $primary-hover-color,
   brand-selected-color: $primary-selected-color,
   brand-selected-hover-color: $primary-selected-hover-color,
-  text-color-on-brand: $text-color-on-primary
+  text-color-on-brand: $text-color-on-primary,
 );
 
 // ## BASIC THEME SHADOW MAP: basic theme's shadow color map.
@@ -57,5 +57,5 @@ $theme-basic-shadow-keys: (
   box-shadow-xs: $box-shadow-xs,
   box-shadow-small: $box-shadow-small,
   box-shadow-medium: $box-shadow-medium,
-  box-shadow-large: $box-shadow-large
+  box-shadow-large: $box-shadow-large,
 );
