--- a/src/config/maps/themes/basic/palette/_palette.scss
+++ b/src/config/maps/themes/basic/palette/_palette.scss
@@ -21,5 +21,5 @@ $theme-basic-palette: (
   color-error-hover: $color-error-hover,
   color-error-highlight: $color-error-highlight,
   color-link_color: $color-link_color,
-  color-surface: $color-surface
+  color-surface: $color-surface,
 );
