--- a/src/config/maps/themes/black/keys/_black-theme-keys.scss
+++ b/src/config/maps/themes/black/keys/_black-theme-keys.scss
@@ -45,7 +45,7 @@ $theme-black-keys: (
   brand-hover-color: $theme-black-primary-hover-color,
   brand-selected-color: $theme-black-primary-selected-color,
   brand-selected-hover-color: $theme-black-primary-selected-hover-color,
-  text-color-on-brand: $theme-black-text-color-on-primary
+  text-color-on-brand: $theme-black-text-color-on-primary,
 );
 
 // DARK THEME SHADOW MAP: dark theme's shadow color map.
@@ -56,5 +56,5 @@ $theme-black-shadow-keys: (
   box-shadow-xs: $theme-black-box-shadow-xs,
   box-shadow-small: $theme-black-box-shadow-small,
   box-shadow-medium: $theme-black-box-shadow-medium,
-  box-shadow-large: $theme-black-box-shadow-large
+  box-shadow-large: $theme-black-box-shadow-large,
 );
