--- a/src/config/maps/themes/dark/keys/legacy/_dark-theme-legacy-keys.scss
+++ b/src/config/maps/themes/dark/keys/legacy/_dark-theme-legacy-keys.scss
@@ -29,5 +29,5 @@ $theme-dark-legacy-keys: (
   layout-border-on-secondary-color: $theme-dark-layout-border-on-secondary-color,
   disabled-background-on-secondary-color: $theme-dark-disabled-background-on-secondary-color,
   disabled-text-on-secondary-color: $theme-dark-disabled-text-on-secondary-color,
-  box-shadow-mediun: $box-shadow-mediun
+  box-shadow-mediun: $box-shadow-mediun,
 );
