feat(colors): add ui-background-color token

--- a/src/config/maps/themes/basic/keys/_keys.scss
+++ b/src/config/maps/themes/basic/keys/_keys.scss
@@ -37,6 +37,7 @@ $theme-basic-keys: (
   private-color: $private-color,
   shareable-color: $shareable-color,
   ui-border-color: $ui-border-color,
+  ui-background-color: $ui-background-color,
   layout-border-color: $layout-border-color,
   warning-color: $warning-color,
   warning-color-hover: $warning-color-hover,
