--- a/src/config/maps/themes/black/keys/_black-theme-keys.scss
+++ b/src/config/maps/themes/black/keys/_black-theme-keys.scss
@@ -36,6 +36,7 @@ $theme-black-keys: (
   private-color: $theme-black-private-color,
   shareable-color: $theme-black-shareable-color,
   ui-border-color: $theme-black-ui-border-color,
+  ui-background-color: $theme-black-ui-background-color,
   layout-border-color: $theme-black-layout-border-color,
   warning-color: $theme-black-warning-color,
   warning-color-hover: $theme-black-warning-color-hover,
