--- a/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
+++ b/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
@@ -36,6 +36,7 @@ $theme-hacker-keys: (
   private-color: $theme-hacker-private-color,
   shareable-color: $theme-hacker-shareable-color,
   ui-border-color: $theme-hacker-ui-border-color,
+  ui-background-color: $theme-hacker-ui-background-color,
   layout-border-color: $theme-hacker-layout-border-color,
   warning-color: $theme-hacker-warning-color,
   warning-color-hover: $theme-hacker-warning-color-hover,
