--- a/src/config/tokens/themes/basic/keys/_keys.scss
+++ b/src/config/tokens/themes/basic/keys/_keys.scss
@@ -62,6 +62,9 @@ $warning-color-selected-hover: $color-yellow_sand;
 $ui-border-color: $color-wolf_gray;
 $layout-border-color: #d0d4e4; // Todo: TBD, should be - var(--color-ui_grey)
 
+// - Backgrounds
+$ui-background-color: $color-ui_grey;
+
 // - Shadows
 $shadow-xs-opacity: $opacity-10;
 $shadow-small-opacity: $opacity-20;
