--- a/src/config/tokens/themes/black/keys/_black-theme-keys.scss
+++ b/src/config/tokens/themes/black/keys/_black-theme-keys.scss
@@ -60,6 +60,9 @@ $theme-black-warning-color-selected-hover: $color-aztec_gold;
 $theme-black-ui-border-color: $color-smoke;
 $theme-black-layout-border-color: $color-dust;
 
+// - Backgrounds
+$theme-black-ui-background-color: $color-dust;
+
 // - Shadows
 $theme-black-box-shadow-color: $color-black;
 
