--- a/src/config/tokens/themes/dark/keys/_dark-theme-keys.scss
+++ b/src/config/tokens/themes/dark/keys/_dark-theme-keys.scss
@@ -61,6 +61,9 @@ $theme-dark-warning-color-selected-hover: $color-aztec_gold;
 $theme-dark-ui-border-color: $color-fog;
 $theme-dark-layout-border-color: $color-silver;
 
+// - Backgrounds
+$theme-dark-ui-background-color: $color-silver;
+
 // DARK THEME TOKENS: SHADOWS
 
 $theme-dark-shadow-color: $color-rift; // todo: fix, not part of Vibe colors
