--- a/src/config/tokens/themes/hacker/keys/_hacker-theme-keys.scss
+++ b/src/config/tokens/themes/hacker/keys/_hacker-theme-keys.scss
@@ -62,6 +62,9 @@ $theme-hacker-warning-color-selected-hover: $color-aztec_gold;
 $theme-hacker-ui-border-color: $color-fog;
 $theme-hacker-layout-border-color: $color-blue-manhattan;
 
+// - Backgrounds
+$theme-hacker-ui-background-color: $color-silver;
+
 // HACKER THEME TOKENS: SHADOWS
 
 $theme-hacker-shadow-color: $color-black;
