--- a/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
+++ b/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
@@ -38,6 +38,7 @@ $theme-dark-keys: (
   private-color: $theme-dark-private-color,
   shareable-color: $theme-dark-shareable-color,
   ui-border-color: $theme-dark-ui-border-color,
+  ui-background-color: $theme-dark-ui-background-color,
   layout-border-color: $theme-dark-layout-border-color,
   warning-color: $theme-dark-warning-color,
   warning-color-hover: $theme-dark-warning-color-hover,
